--- a/.github/workflows/ci.yml/YAML.yml
+++ b/.github/workflows/ci.yml/YAML.yml
@@ -10,5 +10,5 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-      - name: Build and Test
+      - name: Build and Test with Maven
         run: mvn test
